@@ -136,6 +136,37 @@ Example  : chant "boulderbash" orc\n\r\
 If the druid is in a cave, rocky, or mountainous area where the rocks answer \
 to his call, this chant will cause a huge boulder to hurl itself at the target.
 
+CHANT_BREATHCOLOR=CHANT_BREATH_COLOR
+CHANT_BREATH_COLOR=<ABILITY>\
+Usage    : CHANT "BREATH COLOR"\n\r\
+Example  : chant "breath color"\n\r\
+This chant allows the druid to gather information \
+about other creatures.  This is done by observing the color \
+of their breath, when using examine/longlook. \
+The breath colors will be coded as follows: \n\r\
+Black - Something Undead\n\r\
+@if?CheckFactionLoaded?ALIGNMENT.INI@\
+Red - Something evil\n\r\
+Blue - Something good\n\r\
+@endif@\
+Green - A neutral creature\n\r\
+Grey - Something metal or stone\n\r\
+Maroon - Something hidden\n\r\
+Yellow - Something invisible\n\r\
+Brown - Something wooden\n\r\
+Orange - Something trapped\n\r\
+@if?CheckFactionLoaded?INCLINATION.INI@\
+White - Something lawful\n\r\
+Purple - Something chaotic\n\r\
+@endif@\
+(Striped colors) - a single source of multiple colors\n\r\
+(Swirling colors) - multiple sources of multiple colors\n\r\
+(Dull colors) - highest level is below 15 levels below the caster\n\r\
+(Faded colors) - highest level is below 5 levels below the caster\n\r\
+(Bright colors) - highest level is between 5 and 15 levels above the caster\n\r\
+(Brilliant colors) - highest level is between 15 and 25 levels above the caster\n\r\
+(Dazzling colors) - highest level is 25 levels or more above the caster\n\r
+
 CHANT_BRITTLE=<ABILITY>\
 Usage    : CHANT "BRITTLE" [TARGET NAME]\n\r\
 Example  : chant "brittle" sword\n\r\
