@@ -15,6 +15,7 @@
  14. Can now modify GenAbility IDs, and create new ones based on existing ones.
  15. Regeneration property now has many finer controls
  16. GMCP now supports char.effects.get
+ 17. New chants: breath color
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
